# ccvfs

./: .gitignore  CLAUDE.md  CMakeLists.txt  COMPRESSED_FILE_FORMAT.md  COMPRESSION_ANALYSIS.md  DESIGN.md  MAPPING_DESIGN.md  README.md  TESTING.md  build.bat  debug_buffer_test.c  test_batch.ccvfs  test_coverage_report.md  test_hole_detection.c  test_rle_debug.c  test_simple_buffer.c
.claude/: settings.local.json
.kiro/specs/ccvfs-page-mapping-fix/: design.md  requirements.md  tasks.md
.kiro/specs/ccvfs-space-hole-detection/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: BATCH_WRITER_COMPLETION_REPORT.md  BUFFER_FUNCTIONALITY_REPORT.md  CCVFS_CODE_EXAMPLES.md  CCVFS_OPERATION_FLOW.md  CCVFS_USER_GUIDE.md  COMPRESSED_DB_OPERATIONS.md  DB_TOOL_BATCH_WRITER.md  IMPROVED_BATCH_WRITE_DESIGN.md  README.md  批量写入.md
examples/: algorithm_api_example.c
include/: ccvfs.h  ccvfs_algorithm.h  ccvfs_batch_writer.h  ccvfs_block.h  ccvfs_core.h  ccvfs_internal.h  ccvfs_io.h  ccvfs_page.h  ccvfs_utils.h  compress_vfs.h
src/: ccvfs.c  ccvfs_algorithm.c  ccvfs_batch_writer.c  ccvfs_block.c  ccvfs_core.c  ccvfs_io.c  ccvfs_page.c  ccvfs_utils.c  compress_vfs.c  db_compare.c  db_compress_tool.c  db_generator.c  db_tool.c  shell.c
test/: algorithm_test.c  basic_test.c  batch_write_buffer_test.c  buffer_functionality_test.c  buffer_performance_test.c  buffer_performance_test_fixed.c  compression_ratio_test.c  core_algorithm_test.c  db_compress_test.c  improved_batch_writer_test.c  large_db_stress_test.c  large_db_test.c  large_db_test_utf8.c  large_db_zlib_test.c  main.c  real_zlib_test.c  simple_buffer_test.c  simple_buffer_verification.c  simple_db_test.c  simple_hole_test.c  simple_large_test.c  simple_test.c  simple_zlib_test.c  test_hole_detection.c  vfs_connection_test.c  zlib_only_test.c
test/st/: CMakeLists.txt  README.md  system_test_common.c  system_test_common.h  system_test_functions.h  system_test_impl.c  system_test_main.c  test_basic.c  test_batch.c  test_buffer.c  test_encryption.c  test_storage.c  test_tools.c
test/tool/: db_compare.c  db_compare.h  db_generator.c  db_generator.h  db_tool.c
test/ut/: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  STATUS.md  SUMMARY.md  main.c  test_algorithm_registry.c  test_basic.c  test_batch_writer.c  test_ccvfs_algorithm.c  test_ccvfs_core.c  test_ccvfs_page.c  test_ccvfs_utils.c  test_compression.c  test_db_tools.c  test_encryption_key_mgmt.c  test_framework.c  test_framework.h  test_hex_key_parsing.c  test_integration.c  unit_test_framework.c  unit_test_framework.h  unit_test_main.c
